# simple-studio

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  start-simple-studio.bat  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.css  App.svelte  App.test.ts  App.test.tsx  App.tsx  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ChatView.tsx  Composer.svelte  Composer.tsx  ContextLens.svelte  ConversationRail.svelte  EndpointPanel.svelte  MarkdownContent.svelte  MarkdownMessage.test.tsx  MarkdownMessage.tsx  MessageStream.svelte  PrimaryNav.tsx  SessionListPane.test.tsx  SessionListPane.tsx  SettingsDrawer.svelte  SettingsSheet.test.tsx  SettingsSheet.tsx  SettingsView.test.tsx  SettingsView.tsx  WorkspaceHeader.svelte
src/lib/: api.ts  chatState.test.ts  chatState.ts  playground.test.ts  playground.ts  tauri.ts  workspace.test.ts  workspace.ts
src/test/: setup.ts
