[package]
name = "simple-studio"
version = "0.1.0"
description = "Minimal desktop LLM chat client built with Tauri"
authors = ["Uni"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }
futures-util = "0.3.32"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
