[package]
name = "simple-studio-api"
version = "0.3.0"
description = "Local Rust backend for the Simple Studio browser playground"
authors = ["Uni"]
edition = "2021"

[dependencies]
axum = "0.7.9"
bytes = "1.10.1"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "fs", "sync", "net"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
time = { version = "0.3.44", features = ["formatting"] }
async-stream = "0.3.6"
